--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
    <link rel="stylesheet" href="./src/styles/universal.css">
    <link rel="stylesheet" href="./src/styles/navbar.css">
    <link rel="stylesheet" href="./src/styles/hero.css">
+   <link rel="stylesheet" href="./src/styles/responsive.css">
 </head>
 
 <body>
-   <nav>
+   <nav id="navbar">
       <!-- Header of the page -->
       <div class="flex-between container">
          <a href="#" class="logo flex-center">
@@ -25,10 +26,10 @@
             <span>Engineer</span>
          </a>
 
-         <div class="links">
+         <!-- <div class="links">
             <a href="#" class="link">Work</a>
             <a href="#" class="link">Contact</a>
-         </div>
+         </div> -->
       </div>
    </nav>
 
@@ -42,39 +43,44 @@
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur sint, tempore minima neque, provident voluptatum animi id praesentium, ea quo eveniet ipsum doloribus cupiditate deserunt. Expedita quas enim provident sapiente.
             </p>
             <!-- Button of the CV -->
-            <button class="lwt">Let's Work Together</button>
+            <button class="lwt">Download CV</button>
          </div>
       </div>
       <!-- Photo Person -->
       <div class="center felx-centre">
          <!-- Salvar foto pessoal na pasta ou Criar link para pegar a foto -->
-         <img src="." alt="profile"> 
+         <img src="./src/assets/Foto-Pessoal.png" alt="profile"> 
       </div>
       <!-- Infomation experiencie end descripition of work right -->
       <div class="rigth flex-center">
          <div class="info flex-center">
-            <div class="values">
-               <h1>3 +</h1>
+            <div class="values">          
+               <!-- Button of the -->
+               <button class="lwt">preencher</button>
                <h3>yers of experience</h3>
             </div>
 
             <div class="values">
-               <h1>20 +</h1>
+               <!-- Button of the -->
+               <button class="lwt">preencher</button>
                <h3>happy cliente</h3>
             </div>
 
             <div class="values">
-               <h1>50 +</h1>
+               <!-- Button of the -->
+               <button class="lwt">preencher</button>
                <h3>projecte complete</h3>
             </div>
 
-            <div class="values">
-               <h1>200 +</h1>
+            <!-- <div class="values"> 
+               <button class="lwt">preencher</button>
                <h3>screens</h3>
-            </div>
+            </div> -->
          </div>
       </div>
    </div>
+
+   <script src="./src/main.js"></script>
 
 </body>
 </html>
